fix(places): tile alignment bug

--- a/_sass/_tile.scss
+++ b/_sass/_tile.scss
@@ -4,7 +4,7 @@
 .tiles {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   width: 100%;
 
   .tile {
@@ -12,13 +12,10 @@
     margin-bottom: 0.8rem;
     padding: 0.4rem;
 
-    &:last-of-type {
-      margin-bottom: 0;
-    }
-
     .tile-title {
       color: $main;
       font-size: 1rem;
+      line-height: 1rem;
     }
 
     .tile-subtitle {
@@ -30,14 +27,20 @@
     }
 
     .tile-image {
-      padding: 0.8rem 0;
+      margin: 0.8rem 0;
       text-align: center;
       max-width: 100%;
+
+      img {
+        border-radius: 8px;
+        object-position: top;
+      }
     }
 
     .tile-body {
       font-size: 0.8rem;
-      padding: 0.8rem 0;
+      min-height: 8rem;
+      padding: 0.8rem 0 0;
     }
 
     ul {
@@ -52,6 +55,10 @@
 
     .tile {
       width: 100%;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
 
       .tile-title {
         font-size: 1.4rem;
